fix h1 nowrap

--- a/web/assets/styles/styles.css
+++ b/web/assets/styles/styles.css
@@ -409,7 +409,6 @@ h1 i {
   position: relative;
   z-index: -1;
   font-weight: 500;
-  white-space: nowrap;
 }
 
 .highlight {
